correct deploy website

--- a/.github/workflows/deploy-website.yml
+++ b/.github/workflows/deploy-website.yml
@@ -1,5 +1,6 @@
-  on: workflow_dispatch
-   
+on: workflow_dispatch
+
+jobs:
   deploy-website:
       name: Deploy BlazorSvgEditor demo website
       runs-on: ubuntu-latest
