another typo in workflow

--- a/.github/workflows/deploy-website.yml
+++ b/.github/workflows/deploy-website.yml
@@ -21,7 +21,7 @@ jobs:
         run: dotnet publish BlazorSvgEditor.WasmTest/BlazorSvgEditor.WasmTest.csproj --configuration Release --output build
 
       - name: Change base-tag in index.html from / to BlazorGitHubPagesDemo
-        run: sed -i 's/<base href="\/" \/>/<base href="\/BlazorSvgEditor.WasmTest\/" \/>/g' build/wwwroot/index.html
+        run: sed -i 's/<base href="\/" \/>/<base href="\/BlazorSvgEditor\/" \/>/g' build/wwwroot/index.html
 
         # Publish the website
       - name: GitHub Pages action
